tests/compile_fail/newtype.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/newtype.rs:13:11
   |
 9 |     let foo = ReturnResponseMustUse::new(String::from("a"), unique!());
   |                                                             --------- the found closure
10 |     let mut bar = ReturnResponseMustUse::new(String::from("b"), unique!());
   |                                                                 --------- the expected closure
...
13 |     bar = foo;
   |           ^^^ expected closure, found a different closure
   |
   = note: expected struct `ReturnResponseMustUse<String, UniqueType<{closure@$DIR/src/lib.rs:661:56: 661:58}>>`
              found struct `ReturnResponseMustUse<String, UniqueType<{closure@$DIR/src/lib.rs:661:56: 661:58}>>`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object
